--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
-.headbanner {
-    text-align: center;
+* {
+    box-sizing: border-box;
+  }
+
+
+.header {
     -moz-text-size-adjust: 5%;
-    
 }
 
+.logo {
+    width: 10%;
+    height: 10%;
+    vertical-align: centre;
+
+}
+
+.headerbanner {
+    text-align: center;
+}
