--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@
  
 .choose {
     border: 3px solid seagreen; 
-    height: 30%;
-    width: 40%;
-    display: flex;
+    height: 60%;
+    width: 70%;
+    
   
 
 }
@@ -35,11 +35,10 @@
     border: 3px solid rgb(37, 154, 184); 
     height: 30%;
     width: 30%;
-    display: flex;
     
 }
 
 .wrapper{
     display: flex;
-    flex-direction:initial;
+    flex-direction:row;
 }
