--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@
     margin: 2%;
     padding: 2%;
 }
+
+.maincontainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto ;
+}
+
+.payment:nth-child(3){
+    grid-column: 2/2;
+    grid-row: 2/2;
+
+}
