css and html changes

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
     box-sizing: border-box;
   }
 
+body{
+  background-color:greenyellow;
+  }
 
-.header {
-    -moz-text-size-adjust: 5%;
-}
 
 .logo {
     width: 10%;
@@ -22,8 +22,9 @@
   }
   
   figure{
-    border:2px solid red;
+    border: 8px solid red;
     text-align:center;
+    border-radius:30px;
   }
   figure:first-child{
     grid-column: 1/3;  
@@ -34,3 +35,4 @@
   display:block;
   }
  }
+
